--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,6 @@ priority = "default"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start-bot = "commspt_bot_avilla.main:main"
