--- a/.drone.yml
+++ b/.drone.yml
@@ -14,10 +14,13 @@ steps:
       commands:
           - cd /data/commspt-bot-avilla/ && proxychains4 -q git pull origin main
 
-    - name: deploy
+    - name: install dependencies
       commands:
           - docker pull registry1.serinanya.5050net/library/commspt-bot-avilla:latest
           - docker run -v /data/commspt-bot-avilla:/app --rm registry1.serinanya.5050net/library/commspt-bot-avilla:latest /opt/pdm/bin/pdm install --prod
+
+    - name: restart
+      commands:
           - docker kill commspt-bot-avilla
           - docker start commspt-bot-avilla
 
