--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "yggdrasil-mc<0.3.0,>=0.2.3",
     "pillow>=10.3.0",
     "pytz>=2024.1",
+    "arrow>=1.3.0",
 ]
 name = "commspt-bot-avilla"
 version = "0.1.1"
