--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pillow>=10.3.0",
     "pytz>=2024.1",
     "arrow>=1.3.0",
+    "Jinja2>=3.1.3",
 ]
 name = "commspt-bot-avilla"
 version = "0.1.1"
