--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pytz>=2024.1",
     "arrow>=1.3.0",
     "Jinja2>=3.1.3",
+    "cookit>=0.4.1",
 ]
 name = "commspt-bot-avilla"
 version = "0.1.1"
