--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ verify_ssl = true
 
 [tool.black]
 line-length = 120
-target-version = ["py39", "py310", "py311", "py312"]
+target-version = ["py312"]
 include = '\.pyi?$'
 extend-exclude = '''
 '''
@@ -63,14 +63,14 @@ extra_standard_library = ["typing_extensions"]
 
 [tool.ruff]
 line-length = 120
-target-version = "py39"
+target-version = "py312"
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
 ignore = ["C901", "T201", "E731", "E402"]
 
 [tool.pyright]
-pythonVersion = "3.9"
+pythonVersion = "3.12"
 pythonPlatform = "All"
 defineConstant = { PYDANTIC_V2 = true }
 typeCheckingMode = "basic"
