--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,12 +62,77 @@ force_sort_within_sections = true
 extra_standard_library = ["typing_extensions"]
 
 [tool.ruff]
+extend-exclude = []
 line-length = 120
 target-version = "py312"
 
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
 [tool.ruff.lint]
-select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
-ignore = ["C901", "T201", "E731", "E402"]
+preview = true
+ignore = [
+    "B008",
+    "B905",
+    # "COM812",
+    "E501",
+    "FBT001",
+    "FBT002",
+    "ISC001",
+    "PERF203",
+    "PGH003",
+    "PLC04",
+    "RUF001",
+    "RUF002",
+    "RUF003",
+    "RUF006",
+    "RUF029",
+    "RUF100",
+    "S101",
+    "S311",
+    "S404",
+    "SIM117",
+    "TRY002",
+    "TRY003",
+]
+select = [
+    "A",
+    "ANN001",
+    "ARG",
+    "ASYNC",
+    "B",
+    "C4",
+    "COM",
+    "DTZ",
+    "E",
+    "F",
+    "FBT",
+    "FLY",
+    "FURB",
+    "I",
+    "ISC",
+    "N",
+    "NPY",
+    "PERF",
+    "PIE",
+    "PGH",
+    # "PL",
+    "PT",
+    "PTH",
+    "PYI",
+    "Q",
+    "RET",
+    "RSE",
+    "RUF",
+    "S",
+    "SIM",
+    "SLF",
+    "SLOT",
+    "TCH",
+    "TRY",
+    "YTT",
+]
 
 [tool.pyright]
 pythonVersion = "3.12"
@@ -75,4 +140,11 @@ pythonPlatform = "All"
 defineConstant = { PYDANTIC_V2 = true }
 typeCheckingMode = "basic"
 reportShadowedImports = false
-disableBytesTypePromotions = true
+
+[tool.basedpyright]
+pythonVersion = "3.12"
+pythonPlatform = "All"
+defineConstant = { PYDANTIC_V2 = true }
+typeCheckingMode = "standard"
+reportShadowedImports = false
+exclude = ["**/.venv"]
