--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,21 +46,6 @@ name = "pypi"
 url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
 verify_ssl = true
 
-[tool.black]
-line-length = 120
-target-version = ["py312"]
-include = '\.pyi?$'
-extend-exclude = '''
-'''
-
-[tool.isort]
-profile = "black"
-line_length = 120
-length_sort = true
-skip_gitignore = true
-force_sort_within_sections = true
-extra_standard_library = ["typing_extensions"]
-
 [tool.ruff]
 extend-exclude = []
 line-length = 120
@@ -134,12 +119,19 @@ select = [
     "YTT",
 ]
 
+[tool.ruff.lint.isort]
+combine-as-imports = true
+detect-same-package = true
+extra-standard-library = ["typing_extensions"]
+split-on-trailing-comma = true
+
 [tool.pyright]
 pythonVersion = "3.12"
 pythonPlatform = "All"
 defineConstant = { PYDANTIC_V2 = true }
 typeCheckingMode = "basic"
 reportShadowedImports = false
+exclude = ["**/.venv"]
 
 [tool.basedpyright]
 pythonVersion = "3.12"
