--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,8 @@ steps:
 
     - name: install dependencies
       commands:
-          - docker pull registry1.serinanya.5050net/library/commspt-bot-avilla:latest
-          - docker run -v /data/commspt-bot-avilla:/app --rm registry1.serinanya.5050net/library/commspt-bot-avilla:latest /opt/pdm/bin/pdm sync --clean --prod
+          - docker pull registry1.fw.ac.cn/library/commspt-bot-avilla:latest
+          - docker run -v /data/commspt-bot-avilla:/app --rm registry1.fw.ac.cn/library/commspt-bot-avilla:latest /opt/pdm/bin/pdm sync --clean --prod
 
     - name: restart
       commands:
