fucking: fix docker image link

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   bot:
-    image: registry1.serinanya.5050net/library/commspt-bot-avilla:latest
+    image: registry1.fw.ac.cn/library/commspt-bot-avilla:latest
     restart: always
     container_name: commspt-bot-avilla
     volumes:
