--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "motor<4.0.0,>=3.3.2",
     "httpx[http2,socks]<1.0.0,>=0.26.0",
     "email-validator<3.0.0.0,>=2.1.0.post1",
-    "yggdrasil-mc==0.2.6",
+    "yggdrasil-mc==0.2.7",
     "pillow>=10.3.0",
     "pytz>=2024.1",
     "arrow>=1.3.0",
@@ -43,7 +43,7 @@ includes = []
 
 [[tool.pdm.source]]
 name = "pypi"
-url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
+url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
 verify_ssl = true
 
 [tool.ruff]
