--- a/.drone.yml
+++ b/.drone.yml
@@ -17,28 +17,13 @@ steps:
     - name: install dependencies
       commands:
           - docker pull registry1.fw.ac.cn/library/commspt-bot-avilla:latest
-          - docker run -v /data/commspt-bot-avilla:/app --rm registry1.fw.ac.cn/library/commspt-bot-avilla:latest /opt/pdm/bin/pdm sync --clean --prod
+          - docker run -v /data/commspt-bot-avilla:/app --rm -e "PDM_PYPI_URL=https://mirror.nju.edu.cn/pypi/web/simple" registry1.fw.ac.cn/library/commspt-bot-avilla:latest /opt/pdm/bin/pdm sync --clean --prod
 
     - name: restart
       commands:
           - docker kill commspt-bot-avilla
           - docker start commspt-bot-avilla
 
-    - name: send message to telegram via apprise (success)
-      failure: ignore
-      commands:
-          - /root/.local/bin/apprise --title="commspt-bot-avilla DEPLOY" --body="branch main has been deployed successfully." apprise://10.50.0.3:8988/telegram-commspt?tags=all
-      when:
-          status:
-              - success
-
-    - name: send message to telegram via apprise (error)
-      failure: ignore
-      commands:
-          - /root/.local/bin/apprise --title="commspt-bot-avilla DEPLOY" --body="error while deploying! please check!" \ apprise://10.50.0.3:8988/telegram-commspt?tags=all
-      when:
-          status:
-              - failure
 
 node:
     lxc: "111"
